<resources>
    <string name="app_name">ImoocNews</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="img">img</string>
    <string name="TITLE">Title</string>
    <string name="tv_usrename">用户名</string>
    <string name="pass">密   码</string>
    <string name="save_pass">保存密码</string>
    <string name="login">登陆</string>
    <string name="cancel">取消</string>
</resources>
