<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/imoocpic">


    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_usrename"
        android:id="@+id/tv_username"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:textSize="30sp"/>

    <EditText
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ed_username"
        android:layout_alignTop="@+id/tv_username"
        android:layout_toRightOf="@+id/tv_username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text" />

    <TextView
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pass"
        android:id="@+id/tv_pass"
        android:textSize="30sp"
        android:layout_below="@+id/ed_username"
        android:layout_alignLeft="@+id/tv_username"
        android:layout_alignStart="@+id/tv_username" />

    <EditText
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ed_pass"
        android:inputType="textPassword"
        android:layout_below="@+id/ed_username"
        android:layout_toRightOf="@+id/tv_pass"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pass"
        android:id="@+id/checkBox"
        android:layout_marginTop="30dp"
        android:checked="false"
        android:layout_below="@+id/ed_pass"
        android:layout_toLeftOf="@+id/ed_username"
        android:layout_toStartOf="@+id/ed_username" />

    <Button
        android:background="#fefefe"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/Login"
        android:layout_alignTop="@+id/cancel"
        android:layout_alignLeft="@+id/ed_username"
        android:layout_alignStart="@+id/ed_username" />

    <Button
        android:background="#fefefe"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/Login"
        android:layout_toEndOf="@+id/Login"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

</RelativeLayout>